css/style.css
html {
  -webkit-text-size-adjust: 100%;
}

body {
  font-family: sans-serif;
  color: rgb(0, 0, 0);
  font-size: 16px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0 auto;
  max-width: 1080px;
  float: none;
}

#pageMain {
  flex-grow: 1;
}

a {
  color: rgb(0, 119, 255);
}

.header {
  height: auto;
  width: 100%;
  margin: 0;
  padding: 0;
  margin: 0%;
  background-color: #333;
  color: #ffffff;
  text-align: center;
  top: 0;
  position: -webkit-sticky;
  position: sticky;
}

.latestProjects {
  display: grid;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.sectionHeader {
  text-align: center;
  align-items: center;
  justify-content: center;
  padding-top: 25px;
  background-color: #a2becc;
}

.summary {
  padding: 10px;
  margin-left: 30px;
  margin-right: 30px;
  text-align: left;
  background-color: #a803b758;
}

.skills {
  padding: 30px;
  margin-right: 30px;
  margin-left: 30px;
  column-count: 2;
  text-align: left;
  background-color: #a803b758;
}

.skills ul {
  padding: 0;
  margin-top: 0;
  margin-left: 40px;
  margin-right: 40px;
}

.resources {
  text-align: center;
}

.resources li {
  padding: 30px;
  float: none;
  display: inline-block;
  text-align: justify;
  list-style: none;
}

footer {
  bottom: 0;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  text-align: center;
  background-color: #dbc4dd;
  justify-content: center;
  background-color: #333;
  color: #ffffff;
}

.divider {
  position: relative;
  height: 1px;
}

.div-transparent:before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  right: 5%;
  width: 90%;
  height: 1px;
  background-image: linear-gradient(to right, transparent, rgb(48, 49, 51), transparent);
}

.contactLinks {
  text-align: center;
  padding-top: 10px;
  padding-bottom: 10px;
}

.experience {
  margin-left: 30px;
  margin-right: 30px;
  text-align: left;
  background-color: #a803b758;
  padding: 10px;
}

.education {
  margin-left: 30px;
  margin-right: 30px;
  text-align: left;
  background-color: #a803b758;
  padding: 10px;
}

.hobbies {
  margin-left: 30px;
  margin-right: 30px;
  text-align: left;
  padding: 10px;
  background-color: #a803b758;
}

.navigationBar {
  width: 100%;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  text-align: center;
}

.navigationBar a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.navigationBar a:hover {
  color: #111;
}

.navigationBar a:active {
  color: rgb(0, 119, 255);
}

.navigationBar li {
  float: left;
}

.active {
  background-color: rgb(255, 0, 208);
}

.navigationBar ul {
  top: 0;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  position: -webkit-sticky;
  position: sticky;
  background-color: #333;
}

